[package]
name = "bellman-learn"
version = "0.1.0"
authors = ["hou <houliang@huobi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bellman = "0.8.1"
bls12_381 = "0.3.1"
rand = "0.7"
pairing = { version = "0.18", optional = true }
sha2 = "0.9.2"
ff = "0.8.0"
rand_core = "0.5"